--- a/html5/demo13-rmg/index.html
+++ b/html5/demo13-rmg/index.html
@@ -17,10 +17,14 @@
     <div id="grassLand2"></div>
   </div>
   <script src="./js/bird.js"></script>
+  <script src="./js/baseObj.js"></script>
+  <script src="./js/block.js"></script>
   <script>
     var jsWrapBg = document.querySelector('.wrapBg')
     var jsHeadTitle = document.querySelector('.headTitle')
     var jsHeadBird = document.getElementById('headBird')
+    var blocksArr = []
+    var blockDistance = baseObj.randomNum(120, 350)
     var Y = 3
     var index = 0
     var imgArr = ["img/bird0.png", "img/bird1.png"]
@@ -50,6 +54,31 @@
       }
       jsGrassLand1.style.left = jsGrassLand1.offsetLeft - 3 + "px"
       jsGrassLand2.style.left = jsGrassLand2.offsetLeft - 3 + "px"
+
+      if (blocksArr.length) {
+        for (var i = 0; i < blocksArr.length; i++) {
+          blocksArr[i].moveBlock()
+          var x = baseObj.rectangleCrashExamine(blocksArr[i].downDivWrap, bird.div)
+          var y = baseObj.rectangleCrashExamine(blocksArr[i].upDivWrap, bird.div)
+          var z = bird.div.offsetTop >= 390
+          if (x || y || z) {
+            bird.fallSpeed = 0
+            clearInterval(landTimer)
+            jsWrapBg.onclick = null
+          }
+        }
+        if (blocksArr[blocksArr.length -1].downDivWrap.offsetLeft < (450 - blockDistance)) {
+          blockDistance = baseObj.randomNum(130, 250)
+          var newBlock = new Block()
+          newBlock.createBlock()
+          blocksArr.push(newBlock)
+        }
+        if (blocksArr[0].downDivWrap.offsetLeft < -50) {
+          jsWrapBg.removeChild(blocksArr[0].downDivWrap)
+          jsWrapBg.removeChild(blocksArr[0].upDivWrap)
+          blocksArr.shift(blocksArr[0])
+        }
+      }
     }
 
     var jsStartBtn = document.getElementById('startBtn')
@@ -61,11 +90,16 @@
       bird.showBird(jsWrapBg)
       bird.flyBird()
       bird.wingWave() //煽动翅膀
-      jsWrapBg.onclick = function() {
-        bird.fallSpend = -8
-      }
+      
+      var b = new Block()
+      b.createBlock()
+      // b.moveBlock()
+      blocksArr.push(b)
+    }
+
+    jsWrapBg.onclick = function() {
+      bird.fallSpeed = -8
     }
   </script>
 </body>
 </html>
-
