购物车完善

--- a/html5/demo14-create-object/index.html
+++ b/html5/demo14-create-object/index.html
@@ -24,7 +24,7 @@
         function Animal(planet){
             this.planet=planet;
         }
-        Animal.prototype.grtPlanet=function(){
+        Animal.prototype.getPlanet=function(){
             return this.planet
         }
         function Person(name){
