--- a/vue1/vue-ele-app/index.html
+++ b/vue1/vue-ele-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-ele</title>
+    <title>vue-ele-app</title>
   </head>
   <body>
     <div id="app"></div>
