--- a/vue/组件/index.html
+++ b/vue/组件/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <div id="app">
-        <test>
-           
-        </test>
+        <cpm></cpm>
     </div>
+    <template id="temp">
+        <slot>
+        </slot>
+    </template>
     <script src="../vue.js"></script>
     <script>
-        const cpm=Vue.extend({
-            template:` <div>
-                <h1>1111</h1>
-                <h2>1111222</h2>
-            </div>`
+        const app = new Vue({
+            el: '#app',
+            data: {},
+            components: {
+                cpm: {
+                    template: '#temp',
+                    data() {
+                        return {
+                        }
+                    }
+                }
+            }
         })
-        Vue.component('test',cpm)
-    const app=new Vue({
-        el:"#app",
-        data:{}
-    })
     </script>
 </body>
+
 </html>
