--- a/vue/组件/双向绑定.html
+++ b/vue/组件/双向绑定.html
@@ -7,33 +7,45 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-
 <body>
     <div id="app">
-        <test :q="b"></test>
+        <test :q="b" @test1="test1"></test>
     </div>
     <template id="temp">
         <div>
-            <h2>{{a}}</h2>
+         
             <h1>{{q}}</h1>
+            <input type="text" :value="db" @input="input">
         </div>
     </template>
     <script src="../vue.js"></script>
     <script>
         Vue.component('test', {
             template: '#temp',
-            props: ['q'],
+              props: ['q'],
             data() {
                 return {
-                    a: 3333
+                db:this.b
                 }
-            }
+            },
+            methods:{
+                input(event){
+                    this.db=event.target.value
+                    this.$emit('test1',this.db)
+                }
+            }   
         })
         const app = new Vue({
             el: '#app',
             data: {
                 b: '2222',
-            }
+            },
+            methods: {
+                test1(value){
+                    this.b=value
+                }
+            },
+            
         })
     </script>
 </body>
