--- a/vue/前端模块化/配置/src/indec.html
+++ b/vue/前端模块化/配置/src/indec.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="aaa.js" type="module"></script>
+    <div></div>
+ <script src="./tets.js"></script>
 </body>
 </html>
