--- a/vue/前端模块化/配置/indec.html
+++ b/vue/前端模块化/配置/indec.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
- <script src="./tets.js"></script>
+    <div id="app">
+ 
+    </div>
+
+ <script src="./dist/tets.js"></script>
 </body>
 </html>
