--- a/vue1/map/index.html
+++ b/vue1/map/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=	e9f7e0bd472e6f8a1c6a9932cc54edd8"></script>
+    <script src="https://cdn.bootcss.com/echarts/4.3.0-rc.2/echarts.min.js"></script>
   </body>
 </html>
